login/menu(sem alertas)

--- a/table/templates/table/menu.html
+++ b/table/templates/table/menu.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Menu</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-sm bg-body-tertiary">
         <div class="container-fluid">
@@ -84,6 +85,7 @@
             <div id="item-2">
               <h4>Item 2</h4>
               <p>Grade horária RP1</p>
+                <a href="{% url 'page_rp1' %}">acessar</a>
             </div>
             <hr>
             <div id="item-3">
