--- a/login/templates/registration/login.html
+++ b/login/templates/registration/login.html
@@ -31,11 +31,11 @@
     
     <div class="form-group">
       <label for="{{ form.username.id_for_label }}">{{ form.username.label_tag }}</label>
-      <div class="mb-2">{{ form.username }}</div>
+      <div class="mb-2" id="{{ form.username.id_for_label }}">{{ form.username }}</div>
     </div>
     <div class="form-group">
       <label for="{{ form.password.id_for_label }}">{{ form.password.label_tag }}</label>
-      <div class="mb-2">{{ form.password }}</div>
+      <div class="mb-2" id="{{ form.password.id_for_label }}">{{ form.password }}</div>
     </div>
     <button type="submit" value="login" class="btn btn-secondary mb-2 align-middle">Login</button>
     <input type="hidden" name="next" value="{{ next }}">
