bug da deleção a partir da cell cod

--- a/table/templates/table/rp1Table.html
+++ b/table/templates/table/rp1Table.html
@@ -63,7 +63,7 @@
                     <form method="post" action="{% url 'load_rp1' %}" enctype="multipart/form-data">
                         {% csrf_token %}
         
-                        <label for="inputFile" class="form-label">Atualizar/Planilha</label>
+                        <label for="inputFile" class="form-label">Atualizar/Planilha.Use a do drive somente, precisa padronizar ainda</label>
                         <input type="file" class="form-control" id="inputFile" name="excel_file">
         
                         <button type="submit" class="btn btn-secondary">Enviar</button>
