alerta erro ao carregar rp1

--- a/table/templates/table/menu.html
+++ b/table/templates/table/menu.html
@@ -83,9 +83,8 @@
             </div>
             <hr>
             <div id="item-2">
-              <h4>Item 2</h4>
-              <p>Grade horária RP1</p>
-                <a href="{% url 'page_rp1' %}">acessar</a>
+                <h4>Grade horária RP1</h4>
+                <a type="button" class="btn btn-secondary" href="{% url 'page_rp1' %}">Acessar</a>
             </div>
             <hr>
             <div id="item-3">
