--- a/table/templates/table/rp1Table.html
+++ b/table/templates/table/rp1Table.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Carrega o framework Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     
     <!-- Carrega a biblioteca jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -35,12 +34,45 @@
 </head>
 
 <body>
+    {%if text_erro%}
+    <script>
+        $(document).ready(function () {
+            $('#myMd').modal('show')
+        })
+    </script>
+    {%endif%}
+    
+
     <div style="width:90%; font-size: 12px;" class="mx-auto">
+        
+        <div class="modal fade" id="myMd" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Erro de registro</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Turmas não registradas: {{text_erro}}</p>
+                    <p>Verifique se o valor do horário está correto</p>
+                    <ul>
+                        <li>Dias válidos: "Seg", "Ter", "Qua", "Qui", "Sex"</li>
+                        <li>Horários válidos: "08h - 12h", "14h - 18h", "19h - 22h45"</li>
+                        <li> Os dois valores devem estar separados por um espaço</li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+        </div>
+          
         <div id="url-data" data-url="{% url 'save_p' %}"></div>
         <div id="popup" class="popup">
             <div class="popup-content">
                 <span id="closePopup" class="close">&times;</span>
-                <h4>Atribua até 3 professores para a disciplina RP1:</h2>
+                <h4>Atribua professores para RP1</h2>
                 
                 <p>Professor:</p>
                 <input type="text" id="prof_rp1" class="form-control autocomplete campo1" placeholder="Digite o nome">
@@ -57,20 +89,16 @@
                 <input type="submit" class="btn btn-secondary" id="submitForm" value="Salvar">
             </div>
         </div>
-        <div class="container mb-4">
-            <div class="row">
-                <div class="sm-4">
-                    <form method="post" action="{% url 'load_rp1' %}" enctype="multipart/form-data">
-                        {% csrf_token %}
-        
-                        <label for="inputFile" class="form-label">Atualizar/Planilha.Use a do drive somente, precisa padronizar ainda</label>
-                        <input type="file" class="form-control" id="inputFile" name="excel_file">
-        
-                        <button type="submit" class="btn btn-secondary">Enviar</button>
-                    </form>
-                </div>
-            </div>
+        <div class="container mb-4 mt-4">
+            <form method="post" action="{% url 'load_rp1' %}" enctype="multipart/form-data">
+                {% csrf_token %}
+
+                <label for="inputFile" class="form-label">Atualizar turmas.(segue o modelo 2024)</label>
+                <input type="file" class="form-control mb-3" id="inputFile" name="excel_file">
+                <button type="submit" class="btn btn-secondary">Enviar</button>
+            </form>
         </div>
+
         <h4>Resolução de Problemas 1 (RP1)</h4>
         <table class="table table-bordered table-hover">
             <thead>
@@ -91,7 +119,7 @@
                     
                     <td>{{ query.codigo}}</td>
                     {% for d in query.diaaularp1_set.all%}
-                    <td class="text-nowrap">{{ d.dia_semana }} {{d.horario}}</td>
+                    <td class="text-nowrap" style="text-transform: capitalize;">{{ d.dia_semana }} {{d.horario}}</td>
                     {% endfor%}
                     
                     <td>{{ query.cursos }}
@@ -109,6 +137,7 @@
                 {%endfor%}
             </tbody>
         </table>
+        <a type="button" class="btn btn-secondary" href="{% url 'menupage' %}">Voltar Menu</a>
     </div>
 </body>
 </html>
