feat: atualização do header e da página de login

--- a/table/static/table/css/styles.css
+++ b/table/static/table/css/styles.css
@@ -30,3 +30,11 @@
     border-color: #C0C0C0;
     border-width: 1px; 
 }
+
+.headerusp {
+    background-color: #1094AB;
+}
+
+.logo {
+    width: 30dvw;
+}
