--- a/table/templates/table/index.html
+++ b/table/templates/table/index.html
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'table/css/index.css' %}">
-
+    <link rel="stylesheet" href="{% static 'table/css/styles.css' %}">
     {%load static %}
     <script type="text/javascript"> window.CSRF_TOKEN = "{{ csrf_token }}"; </script>
     <script type="module" src="{% static 'table/js/main.js' %}"></script>
@@ -46,8 +46,33 @@
 </head>
 
 <body>
-    
-    <div style="width:90%; font-size: 12px;" class="mx-auto">
+    <header class="navbar navbar-expand-lg navbar-light headerusp">
+        <!-- Canto Esquerdo - Logotipo ou Imagem -->
+        <div class="navbar-brand logo" href="#">
+            <img src="{% static 'images/logotipo.png'%}" alt="Logo"  class="d-inline-block align-top">
+        </div>
+
+        <!-- Canto Direito - Barra de Navegação -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item ">
+                    <p class="nav-link text-light">Ano válido: {{anoAberto}}</p>
+                </li>
+                <li class="nav-item">
+                    <p class="nav-link text-light" id="nrousp">{{ request.user }}</p>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Ajuda</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Sair</a>
+                </li>
+                
+            </ul>
+        </div>
+    </header>
+    <div style="width:90%; font-size: 12px;" class="mx-auto instrucoes">
+        <h4>Instruções</h4>
         <ol>
             <li>Dê um duplo clique sobre a célula para alterá-la</li>
             <li>turmas extras podem ser preenchidas com qualquer matéria</li>
