--- a/table/templates/table/index.html
+++ b/table/templates/table/index.html
@@ -65,7 +65,7 @@
                     <a class="nav-link" href="#">Ajuda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Sair</a>
+                    <a class="nav-link" href="{% url 'logout' %}">Sair</a>
                 </li>
                 
             </ul>
