--- a/table/templates/table/rp1Table.html
+++ b/table/templates/table/rp1Table.html
@@ -44,16 +44,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ">
-                    <p class="nav-link text-light">Ano válido: {{anoAberto}}</p>
+                    <p class="nav-link text-warning">Ano válido: {{anoAberto}}</p>
                 </li>
                 <li class="nav-item">
-                    <p class="nav-link text-light" id="nrousp">{{ request.user }}</p>
+                    <p class="nav-link text-warning" id="nrousp">{{ request.user }}</p>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ajuda</a>
+                    <a class="nav-link text-warning" href="#">Ajuda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Sair</a>
+                    <a class="nav-link text-warning" href="{% url 'logout' %}">Sair</a>
                 </li>
                 
             </ul>
@@ -68,25 +68,7 @@
     {%endif%}
     
     
-    <div style="width:90%; font-size: 12px;" class="mx-auto">
-        <br>
-        <h4>Carregar planilha de atribuição de RP1</h4>
-        <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                <h5 class="modal-title" id="myModalLabel"></h5>
-                </div>
-                <div class="modal-body" id="modalBody">
-                <!-- Aqui será exibido o conteúdo das mensagens -->
-                </div>
-                <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                </div>
-            </div>
-            </div>
-        </div>
-        
+    <div style="width:90%; font-size: 12px;" class="mx-auto">    
         <div class="modal fade" id="myMd" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
@@ -104,7 +86,7 @@
                     </ul>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
@@ -131,18 +113,10 @@
                 <input type="submit" class="btn btn-secondary" id="submitForm" value="Salvar">
             </div>
         </div>
-        <div class="container mb-4 mt-4">
-            <form method="post" action="{% url 'load_rp1' %}" enctype="multipart/form-data">
-                {% csrf_token %}
 
-                <label for="inputFile" class="form-label">Atualizar turmas.(segue o modelo 2024)</label>
-                <input type="file" class="form-control mb-3" id="inputFile" name="excel_file">
-                <button type="submit" class="btn btn-secondary">Enviar</button>
-            </form>
-        </div>
+        <h4>Tabela de atribuição e horários para Resolução de Problemas 1(RP1)</h4>
 
-        <h4>Resolução de Problemas 1 (RP1)</h4>
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered table-hover mt-3">
             <thead>
                 <th scope="col" class="align-middle" >TURMA</th>
                 <th scope="col" class="align-middle" >HORARIO</th>
@@ -179,7 +153,7 @@
                 {%endfor%}
             </tbody>
         </table>
-        <a type="button" class="btn btn-secondary" href="{% url 'menupage' %}">Voltar Menu</a>
+        <a type="button" class="btn btn-warning" href="{% url 'menupage' %}">Voltar Menu</a>
     </div>
 </body>
 </html>
