correção bug selecionar grade no menu

--- a/table/templates/table/menu.html
+++ b/table/templates/table/menu.html
@@ -62,7 +62,7 @@
                 <div id="item-1">
                     <h4>Escolher grade horária</h4>
                     <div class="col-sm-8">
-                        <form id="semestreCurso" mDisciplinas obrigatórias sem turmas alocadasethod="post" action = "redirect" >
+                        <form id="semestreCurso" method="post" action = "redirect" >
                             {% csrf_token %}
                             <div class="form-group">
                                 <label for="select1">Selecione o semestre do curso...</label>
