inserçao modal erro rp1

--- a/table/templates/table/rp1Table.html
+++ b/table/templates/table/rp1Table.html
@@ -67,7 +67,21 @@
     </script>
     {%endif%}
     
-    
+    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="myModalLabel"></h5>
+            </div>
+            <div class="modal-body" id="modalBody">
+            <!-- Aqui será exibido o conteúdo das mensagens -->
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            </div>
+        </div>
+        </div>
+    </div>
     <div style="width:90%; font-size: 12px;" class="mx-auto">    
         <div class="modal fade" id="myMd" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
