versão antes pull

--- a/table/templates/table/menu.html
+++ b/table/templates/table/menu.html
@@ -162,7 +162,7 @@
                         <h5>Docentes com menos de 8 horas-aula (Ímpar)</h5>
                         <p>*CH = carga horária já registrada no sistema</p>
                         <table class="table table-bordered table-hover">
-                            <thead>
+                            <thead class="table-warning">
                                 <th scope="col">Nome</th>
                                 <th scope="col">CH Ímpar</th>
                             </thead>
@@ -185,7 +185,7 @@
                         <h5>Docentes com menos de 8 horas-aula (Par)</h5>
                         <p>*CH = carga horária já registrada no sistema</p>
                         <table class="table table-bordered table-hover">
-                            <thead>
+                            <thead class="table-warning">
                                 <th scope="col">Nome</th>
                                 <th scope="col">CH Par</th>
                             </thead>
@@ -206,7 +206,7 @@
                     <div class="col-12" id="disc_sem_turma">
                         <h5>Disciplinas obrigatórias sem turmas alocadas</h5>    
                         <table class="table table-bordered table-hover">
-                            <thead>
+                            <thead class="table-warning">
                                 <th scope="col" class="align-middle" >Nome</th>
                                 <th scope="col" class="align-middle" >Abreviação</th>
                                 <th scope="col" class="align-middle" >Turma(s) faltando</th>
