--- a/table/templates/table/rp1Table.html
+++ b/table/templates/table/rp1Table.html
@@ -131,7 +131,7 @@
         <h4>Tabela de atribuição e horários para Resolução de Problemas 1(RP1)</h4>
 
         <table class="table table-bordered table-hover mt-3">
-            <thead>
+            <thead class="table-warning">
                 <th scope="col" class="align-middle" >TURMA</th>
                 <th scope="col" class="align-middle" >HORARIO</th>
                 <th scope="col" class="align-middle" >CURSOS</th>
@@ -167,7 +167,7 @@
                 {%endfor%}
             </tbody>
         </table>
-        <a type="button" class="btn btn-warning" href="{% url 'menupage' %}">Voltar Menu</a>
+        <a type="button" class="btn btn-warning mb-3" href="{% url 'menupage' %}">Voltar Menu</a>
     </div>
 </body>
 </html>
