--- a/table/static/table/css/index.css
+++ b/table/static/table/css/index.css
@@ -101,3 +101,16 @@
 .instrucoes {
     margin-top: 3vh;
 }
+
+/* .ui-autocomplete .ui-menu-item {
+    background-color: red;
+} */
+
+.item-paulo {
+    background-color: red;
+}
+
+/* .ui-autocomplete {
+    background-color: green;
+} */
+
