atualização geral do projeto

--- a/table/templates/table/index.html
+++ b/table/templates/table/index.html
@@ -39,6 +39,9 @@
     {{ auto_profs|json_script:"auto_profs"}}
     {{ rest_horarios|json_script:"rest"}}
     {{ impedimentos_totais|json_script:"impedimentos_totais"}}
+    {{ cod_mtr_sugestao|json_script:"cod_mtr_sugestao"}}
+    {{ cod_mtr_sugestao_completo|json_script:"cod_mtr_sugestao_completo"}}
+    
     <!-- {{ turmas_rp|json_script:"turmas_rp" }} -->
 
     <title>Cronograma</title>
@@ -97,8 +100,13 @@
             </div>
             </div>
         </div>
+
         <div id="url-data" data-url="{% url 'save_modify' %}"></div>
         
+        
+        <!--NÂO APAGUE-->
+        <!--Descontinuado, mas continua funcionando se descomentar-->
+        <!--
         <h4>Tabela para inserção de turmas extras</h4>
         {% if anoAberto == ano%}
         <table class="table table-bordered editable" id="tbl_ext">
@@ -153,6 +161,7 @@
                 </tr>
             </tbody>
         </table>
+        --> 
 
         <div id="popup" class="popup">
             <div class="popup-content">
@@ -186,11 +195,11 @@
         
         <hr>
         
-        <h4>Tabela para inserção de obrigatórias + extras vespertino</h4>
+        <h4>Tabela para inserção de obrigatórias e extras no vespertino</h4>
         {% if anoAberto == ano%}
-        <table class="table table-bordered font-weight-bold editable" id="tbl1">
+        <table class="table table-bordered font-weight editable" id="tbl1">
         {% else %}
-        <table class="table table-bordered font-weight-bold" id="tbl1">
+        <table class="table table-bordered font-weight" id="tbl1">
         {% endif %}    
             <thead>
                 <tr class="table-secondary">
@@ -276,8 +285,9 @@
             </tbody>
         </table>
 
-  
-        {% if anoAberto == ano%}
+
+        <!--Descontinuado, mas continua funcionando se descomentar-->
+        <!--{% if anoAberto == ano%}
         {% if not semestre == 7 and not semestre == 8%}
         <div class="container mt-3">
             <h6>Preferências para o {{semestre}}º semestre (as linhas 1,2,3 são as prioridades)</h6>
@@ -302,7 +312,7 @@
                 </tbody>
             </table>
         </div>
-        {%endif%}
+        {%endif%} -->
         
         
         <div class="container">
