--- a/table/templates/table/rp1Table.html
+++ b/table/templates/table/rp1Table.html
@@ -131,7 +131,7 @@
             </div>
         </div>
 
-        <h4>Tabela de atribuição e horários para Resolução de Problemas 1(RP1)</h4>
+        <h4>Tabela de atribuição e horários para Resolução de Problemas 1 (ACH0041 RP1)</h4>
 
         <table class="table table-bordered table-hover mt-3">
             <thead class="table-warning">
